@@ -167,6 +167,9 @@ Bug Fixes
 * LUCENE-3720: fix memory-consumption issues with BeiderMorseFilter.
   (Thomas Neidhart via Robert Muir)
 
+* LUCENE-4401: Fix bug where DisjunctionSumScorer would sometimes call score()
+  on a subscorer that had already returned NO_MORE_DOCS.  (Liu Chao, Robert Muir)
+
 Optimizations
 
 * LUCENE-4322: Decrease lucene-core JAR size. The core JAR size had increased a
